--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,6 @@
-
-test-attribute=NewValueFromApplicationProperties
+title=Api Actividad 5
+description=Api que permite hacer operaciones CRUD en Students y Degrees
+contact=Victor Manuel Pedraza Moreno
+url=acg.ual.es
+email=vpm570@inlumine.ual.es
+version=0.0.1
