--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-title=Api Actividad 5
-description=Api que permite hacer operaciones CRUD en Students y Degrees
+title=Api Actividad 4
+description=Api que permite hacer operaciones CRUD en Usuarios
 name=Victor Manuel Pedraza Moreno
 url=acg.ual.es
 email=vpm570@inlumine.ual.es
